add - api foto
